tests/return_missing_error.june
// error: function is missing expected return at end of function


fun foo() -> i64 {
}

println(foo())